force-app/main/default/objects/BoardProgram__c/BoardProgram__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Board / Program</label>
    <nameField>
        <label>Board / Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boards / Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>