force-app/main/default/objects/BoardProgram__c/fields/BoardProgramNumber__c.field-meta.xml
<CustomField>
    <fullName>BoardProgramNumber__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <label>Board / Program Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>