force-app/main/default/objects/BoardProgram__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>