force-app/main/default/objects/BoardProgram__c/fields/UseEnhancedOnlineApplication__c.field-meta.xml
<CustomField>
    <fullName>UseEnhancedOnlineApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Enhanced Online Application</label>
    <type>Checkbox</type>
</CustomField>