force-app/main/default/objects/BoardProgram__c/listViews/All_Boards_Programs.listView-meta.xml
<ListView>
    <fullName>All_Boards_Programs</fullName>
    <columns>NAME</columns>
    <columns>BoardProgramNumber__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Boards / Programs</label>
</ListView>